# Curious-Agent

./: .gitignore  README.md  _vizdoom.ini  copy_experiments_to_ssh.py  main.py  play.py  pyproject.toml  train.py  visualization.ipynb
_vizdoom/battle.wad/: MAP01.gzc
env/: env_setup.py  health_gathering.py  health_gathering_supreme.py  layout_generator.py  vizdoomenv.py
rlexplore/: __init__.py  rise.py
rlexplore/networks/: random_encoder.py
rlexplore/rnd/: rnd.py
rllte/common/prototype/: on_policy_agent.py
rllte/env/: __init__.py  utils.py
rllte/env/vizdoom/: __init__.py
rllte/hub/: __init__.py
sample_factory/: batch_processors.py  enjoy.py
sample_factory/algo/learning/: batcher.py  learner.py
sample_factory/algo/sampling/: batched_sampling.py  non_batched_sampling.py  rollout_worker.py  sampling_utils.py
sample_factory/custom/: __init__.py  reward_processer.py
sample_factory/model/: encoder.py
sb3/: cam.py  main.py  utils.py
scenarios/: health_gathering.cfg  health_gathering1.cfg  health_gathering2.cfg  health_gathering2.wad.bak  health_gathering_no_life.cfg  health_gathering_no_life.wad  health_gathering_no_life.wad.bak  health_gathering_supreme.cfg  health_gathering_supreme.wad  health_gathering_supreme.wad.bak  health_gathering_supreme_no_life.cfg  health_gathering_supreme_no_life.wad.bak
sf/: play.py  run.py  train.py  utils.py
sf/experiments/: exps.py
sf_examples/vizdoom/: enjoy_custom_vizdoom_env.py  generate_data_from_experiment.py  play_human.py  train_custom_vizdoom_env.py  utils.py
ssh/: 100g_rnd_beta01_0  100g_rnd_kappa1e-2_0  100g_rnd_latentDim256_0  100g_rnd_lr1e-3_0
wrappers/: __init__.py  glaucoma.py  image_transformation.py  rnd_wrapper.py  trajectory_visualization.py
(+18 files in other folders)
