[project]
name = "vzd"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "gymnasium[accept-rom-license, other]==0.27.1",
    "torch",
    "torchvision",
    "termcolor",
    "scipy>= 1.7.0",
    "pynvml==11.5.0",
    "seaborn==0.12.2",
    "huggingface_hub==0.14.1",
    "opencv-python>=4.11.0.86",
    "numpy<2",
    "tensorboard>=2.20.0",
    "pandas>=2.3.3",
    "plotly>=6.5.2",
    "nbformat>=5.10.4",
    "grad-cam>=1.5.5",
    "arch>=8.0.0",
    "gym>=0.26.2",
    "envpool>=0.8.4",
]
