[project]
name = "vzd"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gymnasium",
    "matplotlib==3.6.0",
    "nbformat>=5.10.4",
    "numpy>=1.18",
    "opencv-python>=4.11.0.86",
    "plotly>=6.5.2",
    "rllte-core>=1.0.1",
    "tensorboard>=2.19.0",
    "tensorboardx>=2.6.4",
    "torch>=2.6.0",
    "vizdoom>=1.2.4",
]
