[project]
name = "vzd"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anywidget>=0.11.0",
    "colorlog>=6.9.0",
    "grad-cam>=1.5.5",
    "gymnasium",
    "huggingface-hub>=0.33.2",
    "inquirerpy>=0.3.4",
    "ipywidgets>=8.1.8",
    "matplotlib-inline>=0.2.2",
    "moviepy>=2.1.2",
    "numpy>=1.18",
    "opencv-python>=4.11.0.86",
    "plotly>=6.9.0",
    "pynput>=1.8.2",
    "signal-slot-mp>=1.0.5",
    "stable-baselines3[extra]>=2.6.0",
    "tensorboard>=2.19.0",
    "tensorboardx>=2.6.4",
    "torch>=2.6.0",
    "vizdoom>=1.2.4",
]
